Fix #1 on Mobiile Header Spacing

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -295,9 +295,6 @@
     .bigwhensmall {
       width: 100%
     }
-    .fixH {
-      width: 75%;
-    }
     .relativeS {
       position: relative;
     }
